Finsihed the controls of hte game and now implemetnign teh gamecontroller with all the features insidee the class

--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body id="content">
+    <div id="playerSide">
+      <div id="playerShips">ddd</div>
+      <div id="player1" class="grid">dd</div>
+    </div>
+    <div id="settings">
+      <div>restart</div>
+    </div>
+    <div id="computerSide">
+      <div id="computerShips">ddd</div>
+      <div id="player2" class="grid">dd</div>
+    </div>
+  </body>
 </html>
