added the UI for ships and settings

--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,15 @@
     <title>Document</title>
   </head>
   <body id="content">
-    <div id="playerSide">
-      <div id="playerShips">ddd</div>
+    <div id="player1Side">
+      <div id="player1Ships">ddd</div>
       <div id="player1" class="grid">dd</div>
     </div>
     <div id="settings">
       <div>restart</div>
     </div>
-    <div id="computerSide">
-      <div id="computerShips">ddd</div>
+    <div id="player2Side">
+      <div id="player2Ships">ddd</div>
       <div id="player2" class="grid">dd</div>
     </div>
   </body>
